# daemon

./: .gitignore  CMakeLists.txt
config/: setting.yaml.format  settings.yaml
include/config/: ConfigParser.hpp  DaemonIdManager.hpp
include/core/: CPUIdleMonitor.hpp  FileSegregator.hpp  FileWatcher.hpp  LocalBackendServer.hpp  Scheduler.hpp
include/core/utils/: Logger.hpp
src/: main.cpp
src/config/: ConfigParser.cpp  DaemonIdManager.cpp
src/core/: CPUIdleMonitor.cpp  FileSegregator.cpp  FileWatcher.cpp  LocalBackendServer.cpp  Scheduler.cpp
src/core/utils/: Logger.cpp
tests/: CMakeLists.txt  test_config.cpp  test_cpuIdle.cpp  test_fileseg.cpp  test_scheduler.cpp
web/backend/: index.js
web/frontend/src/: App.jsx
web/frontend/src/components/: DaemonControl.jsx  DaemonLog.jsx  DaemonSettings.jsx
